--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,20 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3><i>Procamp</i></h3>
+  <img src="assets/imgs/logo.jpg" alt="log">
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <form>
+    <ion-item>
+      <ion-label>Email</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Senha</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+    <br>
+    <div class='buttons'>
+      <button ion-button>Entrar</button> <button ion-button>Registar</button>
+    </div>
+  </form>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
