--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,6 +14,9 @@
     <br>
     <div class='buttons'>
       <button ion-button>Entrar</button> <button ion-button>Registar</button>
+      <br>
+      <br>
+      <button ion-button outline (click)='entrarSemCadastro()'>Entrar sem cadastro</button>
     </div>
   </form>
 
