--- a/src/pages/init/init.html
+++ b/src/pages/init/init.html
@@ -9,5 +9,11 @@
 </ion-header>
 
 <ion-content padding>
-<p>Página inicial</p>
+  <ion-list>
+    <button ion-item *ngFor="let campanha of campanhas">
+      <h2>{{ campanha.nome }}</h2>
+      <label>{{ campanha.tipoCampanha.descricao }}</label>
+      <h4>Vigência: {{campanha.dataInicio}}  -  {{campanha.dataFim}}</h4>
+    </button>
+  </ion-list>
 </ion-content>
