--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,18 +5,19 @@
   <form>
     <ion-item>
       <ion-label>Email</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input [(ngModel)] = "creds.email" name="email" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Senha</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input [(ngModel)] = "creds.senha" name="senha" type="password"></ion-input>
     </ion-item>
     <br>
     <div class='buttons'>
-      <button ion-button>Entrar</button> <button ion-button>Registar</button>
+      <button ion-button (click)='login()'>Entrar</button> <button ion-button>Registar</button>
       <br>
       <br>
       <button ion-button outline (click)='entrarSemCadastro()'>Entrar sem cadastro</button>
+      <button ion-button outline (click)='login()'>Entrar</button> 
     </div>
   </form>
 
