Criado pagina de cadastro

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,11 +13,10 @@
     </ion-item>
     <br>
     <div class='buttons'>
-      <button ion-button (click)='login()'>Entrar</button> <button ion-button>Registar</button>
+      <button ion-button (click)='login()'>Entrar</button> <button ion-button (click)='signup()'>Registar</button>
       <br>
       <br>
       <button ion-button outline (click)='entrarSemCadastro()'>Entrar sem cadastro</button>
-      <button ion-button outline (click)='login()'>Entrar</button> 
     </div>
   </form>
 
