--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -41,18 +41,18 @@
 
     <ion-item>
         <ion-label stacked>Email*</ion-label>
-        <ion-input formControlName="email" type="text"></ion-input>
+        <ion-input [(ngModel)] = "creds.email" formControlName="email" type="text"></ion-input>
     </ion-item>
     <p class="danger" *ngIf="formGroup.controls['email'].dirty && formGroup.controls['email'].errors" margin-left>Valor inválido</p>
     <ion-item>
         <ion-label stacked>Senha*</ion-label>
-        <ion-input formControlName="senha" type="password"></ion-input>
+        <ion-input [(ngModel)] = "creds.senha" formControlName="senha" type="password"></ion-input>
     </ion-item>
     <p class="danger" *ngIf="formGroup.controls['senha'].dirty && formGroup.controls['senha'].errors" margin-left>Valor inválido</p>
     <ion-item>
       <ion-label stacked>Preferencias*</ion-label>
       <ion-select formControlName="preferenciaId">
-        <ion-option *ngFor="let preferencia of preferencias" [value]="preferencia.id">{{preferencia.nome}}</ion-option>
+        <ion-option *ngFor="let preferencia of preferencias" [value]="preferencia">{{preferencia.nome}}</ion-option>
       </ion-select>
     </ion-item>
     <button ion-button block type="button" (click)='adicionarPreferencia()' >Adicionar Preferencia</button>
