--- a/src/pages/init/init.html
+++ b/src/pages/init/init.html
@@ -9,6 +9,13 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-item>
+      <ion-label>Buscar:</ion-label>
+      <ion-select #filter (ionChange)="changeFilter($event)">
+        <ion-option value="recentes">Recentes</ion-option>
+        <ion-option value="preferencias">Preferencias</ion-option>
+      </ion-select>
+    </ion-item>
   <ion-list>
     <button ion-item *ngFor="let campanha of campanhas" (click)="showCampanha(campanha.id)">
       <h2>{{ campanha.nome }}</h2>
