Corrigido erros no login

--- a/src/pages/init/init.html
+++ b/src/pages/init/init.html
@@ -9,6 +9,14 @@
 </ion-header>
 
 <ion-content padding>
+    <ion-card>
+        <ion-card-header>
+            EMPRESA
+        </ion-card-header>
+        <ion-card-content>
+            <h2>Id Empresa:</h2>
+        </ion-card-content>
+    </ion-card>
   <ion-item>
       <ion-label>Buscar:</ion-label>
       <ion-select #filter (ionChange)="changeFilter($event)">
