--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
     }
   </script>-->
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwpP0OxFfO5KdqEjGcbEqapNxpOLn_KjM"
+  async defer></script>
+
   <link href="build/main.css" rel="stylesheet">
 
 </head>
