Corrigido cadastro de usuario

--- a/src/pages/init/init.html
+++ b/src/pages/init/init.html
@@ -13,7 +13,7 @@
       <ion-label>Buscar:</ion-label>
       <ion-select #filter (ionChange)="changeFilter($event)">
         <ion-option value="recentes">Recentes</ion-option>
-        <ion-option value="preferencias">Preferencias</ion-option>
+        <ion-option value="novas">Novas</ion-option>
       </ion-select>
     </ion-item>
   <ion-list>
