--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -66,7 +66,7 @@
       <button ion-button block type="button"  (click)='mostra()' >Salvar</button>
 
 
-      <button ion-button block type="button">Excluir</button>
+      <button ion-button block type="button" (click)='excluiUsuario()'>Excluir</button>
 
   <!--</form>-->
 </ion-content>
