--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -56,7 +56,7 @@
         <ion-option *ngFor="let item of tpCampanhas" [value]="item">{{item.descricao}}</ion-option>
       </ion-select>
     </ion-item>
-    <button ion-button block type="button" (click)='adicionarPreferencia()' >Adicionar Preferencia</button>
+    <button ion-button block type="button" (click)='adicionarTpLocalidade()' >Adicionar Preferencia</button>
 
     <ion-item>
       <ion-list>
